Preparing two canvases for needle spin

--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,17 @@
 </head>
 <body>
 
-<div id="spinner-container">
-    <canvas id="spinner-canvas"></canvas>
+
+<div id="foo">
+    <div id="spinner-container">
+        <canvas id="spinner-canvas"></canvas>
+    </div>
+    <div id="needle-container">
+        <canvas id="needle-canvas"></canvas>
+    </div>
 </div>
+
+
 
 <button id="start">Press to Start</button>
 <button id="stop">Press to Stop</button>
